test/errors/parsing/implicitModule.chpl
module TheModule {

}
var x = 1;
